--- a/qml.qrc
+++ b/qml.qrc
@@ -1,5 +1,14 @@
 <RCC>
     <qresource prefix="/">
         <file>main.qml</file>
+        <file>Random.qml</file>
+        <file>RandomForm.ui.qml</file>
+        <file>kub.jpg</file>
+        <file>1.png</file>
+        <file>2.png</file>
+        <file>3.png</file>
+        <file>4.png</file>
+        <file>5.png</file>
+        <file>6.png</file>
     </qresource>
 </RCC>
